# pickaxe

./: .gitignore  hello.py  pyproject.toml  setup.cfg  setup.py
minedatabase/: pickaxe.py  reactions.py  utils.py
minedatabase/data/known/: known_compounds.parquet
minedatabase/filters/: similarity.py
tests/data/parquet/: compounds.parquet  reactions.parquet
