[project]
name = "pickaxe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "rdkit>=2025.3.2",
    "scikit-learn>=1.6.1",
    "setuptools>=80.8.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
